prusti-tests/tests/parse/ui/spec_entailment_fail.stderr
error: expected Prusti assertion
 --> $DIR/spec_entailment_fail.rs:9:14
  |
9 | #[requires(f |=)]
  |              ^^

error: expected `[`
  --> $DIR/spec_entailment_fail.rs:12:17
   |
12 | #[requires(f |= ||)]
   |                 ^^

error: expected `[`
  --> $DIR/spec_entailment_fail.rs:15:17
   |
15 | #[requires(f |= || 0)]
   |                 ^^

error: expected Prusti assertion
  --> $DIR/spec_entailment_fail.rs:18:12
   |
18 | #[requires(|= || [])]
   |            ^^

error: aborting due to 4 previous errors

